--- a/KickbackKingdomLauncher.Desktop/KickbackKingdomLauncher.Desktop.csproj
+++ b/KickbackKingdomLauncher.Desktop/KickbackKingdomLauncher.Desktop.csproj
@@ -15,5 +15,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KickbackKingdomLauncher\KickbackKingdomLauncher.csproj" />
+	  <None Include="..\KickbackSecrets.json">
+		  <Link>KickbackSecrets.json</Link>
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
   </ItemGroup>
 </Project>
