--- a/KickbackKingdomLauncher/KickbackKingdomLauncher.csproj
+++ b/KickbackKingdomLauncher/KickbackKingdomLauncher.csproj
@@ -22,6 +22,7 @@
 		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.2" />
 		<PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.2" />
 		<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.3.2" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 	</ItemGroup>
 
 	<ItemGroup>
